--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+/* Variables */
+:root {
+    --background-dark: #2D2D2D;
+}
+
+/* End Variables */
+
 /* CSS Reset */
 html {
     box-sizing: border-box;
@@ -36,3 +43,12 @@ img {
 }
 
 /* End CSS Reset */
+
+/* Global Styles */
+body {
+    font-family: 'Roboto', sans-serif;
+    background-color: var(--background-dark);
+    color: #fff;
+    font-size: 1rem;
+    line-height: 1.6;
+}
