--- a/style.css
+++ b/style.css
@@ -147,6 +147,38 @@ nav li:first-child {
     border-radius: 50%;
 }
 
+/* My Skills */
+#skills {
+    padding: 2rem 1.5rem 2rem 1.5rem;
+}
+
+#skills h2 {
+    font-size: 2rem;
+    font-weight: bold;
+    text-align: center;
+}
+
+#skills p {
+    text-align: center;
+}
+
+#skill-container {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding-top: 2rem;
+    gap: 1.5rem;
+}
+
+.skill-icons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin: 0;
+    width: 75px;
+}
+
 /* Footer */
 footer {
     padding: 2rem 1.5rem;
